<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorOnPrimary"
    >

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"
        />

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cantMath"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:theme="@style/homeTitleStyle"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_container"
        android:paddingVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle"
        app:layout_constraintVertical_bias="0.1">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineContainer1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineContainer2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />

        <TextView
            android:id="@+id/txtAccount"
            style="@style/inputTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/bill"
            app:layout_constraintEnd_toStartOf="@id/guidelineContainer2"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@id/guidelineContainer1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtAccount"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:background="@drawable/rounded_input"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/txtAccount"
            app:layout_constraintStart_toStartOf="@id/txtAccount"
            app:layout_constraintTop_toBottomOf="@id/txtAccount" />

        <TextView
            android:id="@+id/txtTip"
            style="@style/inputTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/tip"
            app:layout_constraintEnd_toStartOf="@id/guidelineContainer2"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@id/guidelineContainer1"
            app:layout_constraintTop_toBottomOf="@id/edtAccount" />

        <EditText
            android:id="@+id/edtTip"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:background="@drawable/rounded_input"
            app:layout_constraintEnd_toEndOf="@id/txtTip"
            app:layout_constraintStart_toStartOf="@id/txtTip"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/txtTip" />

        <TextView
            android:id="@+id/buttonsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/manjari_bold"
            android:gravity="center"
            android:text="@string/numberOfPeople"
            android:textColor="@color/hanPurple"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineContainer2"
            app:layout_constraintStart_toEndOf="@id/guidelineContainer1"
            app:layout_constraintTop_toBottomOf="@id/edtTip" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minusButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/minus"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/txtTip"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/txtTip"
            app:layout_constraintTop_toBottomOf="@id/buttonsTitle" />


        <TextView
            android:id="@+id/number_of_person"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/hanPurple"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineContainer2"
            app:layout_constraintStart_toStartOf="@+id/guidelineContainer1"
            app:layout_constraintTop_toBottomOf="@+id/buttonsTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plusButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/plus"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edtTip"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@id/edtTip"
            app:layout_constraintTop_toBottomOf="@id/buttonsTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalc"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:fontFamily="@font/manjari_bold"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:text="@string/calculate"
        android:textColor="@color/hanPurple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        />
</androidx.constraintlayout.widget.ConstraintLayout>